<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fillForm">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="just an background image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fill_form" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/test1"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:gravity="center"
                android:text="@string/form_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="30sp"
                android:textColor="#000000"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/form_name_editText"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:ems="10"
                android:hint="@string/form_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#434343"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />

            <EditText
                android:id="@+id/form_phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_phone_number"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#434343"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />

            <EditText
                android:id="@+id/form_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_email"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#434343"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToActiveBluetooth"
                android:text="@string/go_to_next" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>